--- a/App/Views/app/follow.phtml
+++ b/App/Views/app/follow.phtml
@@ -61,9 +61,9 @@
 				<div class="col">
 					<div class="card">
 						<div class="card-body">
-							<form>
+							<form action="/follow" method="GET" >
 								<div class="input-group mb-3">
-									<input type="text" class="form-control" placeholder="Quem você está procurando?">
+									<input name="search" type="text" class="form-control" placeholder="Quem você está procurando?">
 									<div class="input-group-append">
 										<button class="btn btn-primary" type="submit">Procurar</button>
 									</div>
@@ -73,14 +73,15 @@
 					</div>
 				</div>
 			</div>
-
+			
+			<?php foreach ($this->view->users as $key => $user) { ?>
 			<div class="row mb-2">
 				<div class="col">
 					<div class="card">
 						<div class="card-body">
 							<div class="row">
 								<div class="col-md-6">
-									Usuário
+									<?= $user->nome ?>
 								</div>
 							
 								<div class="col-md-6 d-flex justify-content-end">
@@ -94,6 +95,7 @@
 					</div>
 				</div>
 			</div>
+			<?php } ?>
 
 		</div>
 	</div>
