--- a/App/Views/app/search_users.phtml
+++ b/App/Views/app/search_users.phtml
@@ -1,3 +1,7 @@
+<script>
+let url = $(document).attr('URL')
+let params  = url.replace("http://localhost:8080/search_users?","")
+</script>
 <nav class="navbar navbar-expand-lg menu">
 	<div class="container">
 	  <div class="navbar-nav">
@@ -61,7 +65,7 @@
 				<div class="col">
 					<div class="card">
 						<div class="card-body">
-							<form action="/follow" method="GET" >
+							<form action="/search_users" method="GET" >
 								<div class="input-group mb-3">
 									<input name="search" type="text" class="form-control" placeholder="Quem você está procurando?">
 									<div class="input-group-append">
@@ -85,9 +89,16 @@
 								</div>
 							
 								<div class="col-md-6 d-flex justify-content-end">
-									<div>
-										<a href="#" class="btn btn-success">Seguir</a>
-										<a href="#" class="btn btn-danger">Deixar de seguir</a>
+									<div id="<?= $user->id ?>" >
+									<script>
+									if (<?= $user->following ?>) {
+										$('#<?= $user->id ?>').append(`<a href="/follow?reloadSearch=${params}&follow=0&user_Target_Id=<?= $user->id ?>" class="btn btn-danger">Deixar de seguir</a>`)
+									}
+									else
+									{
+										$('#<?= $user->id ?>').append(`<a href="/follow?reloadSearch=${params}&follow=1&user_Target_Id=<?= $user->id ?>" class="btn btn-success">Seguir</a>`)
+									}
+									</script>
 									</div>
 								</div>
 							</div>
